--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="login_register/login_register.js"></script>
         <script src="https://www.w3schools.com/lib/w3.js"></script>
+        <script src="scripts/ajax.js"></script>
         
         
     </head>
