--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
           <link rel="stylesheet" href="login_register/login_register.css">
           <link rel="stylesheet" href="header/header.css">
             <link rel="stylesheet" href="style/index.css">
+            <link rel="stylesheet" href="style/jquery.toast.min.css">
+
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="login_register/login_register.js"></script>
         <script src="https://www.w3schools.com/lib/w3.js"></script>
         <script src="scripts/ajax_index.js"></script>
         <script src="scripts/parsley.min.js"></script>
+        <script src="scripts/jquery.toast.min.js"></script>
 
 
 
